--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -145,6 +145,7 @@
   <div class="container">
     <div class="section text-center">
       <h2 class="titlen">Conoce nuestros servicios</h2>
+      <h3 class="titlen">Haz click en las solapas desplegables</h3>
        <!-- gif de bicho saltando -->
        <div class="col-sm-6 justify-content-end align-self-end">
         <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
@@ -165,14 +166,14 @@
       <label for="tab-3" class="tab-label-3">Búsqueda de información</label>
       <input id="tab-4" type="radio" name="radio-set" class="tab-selector-4" />
       <label for="tab-4" class="tab-label-4">Gestión del Repositorio</label>
-      <input id="tab-5" type="radio" name="radio-set" class="tab-selector-1" checked="checked" />
-      <label for="tab-5" class="tab-label-1">Préstamo notebooks</label>
-      <input id="tab-6" type="radio" name="radio-set" class="tab-selector-2" />
-      <label for="tab-6" class="tab-label-2">Libre deuda</label>
-      <input id="tab-7" type="radio" name="radio-set" class="tab-selector-3" />
-      <label for="tab-7" class="tab-label-3">Diseño de Software</label>
-      <input id="tab-8" type="radio" name="radio-set" class="tab-selector-4" />
-      <label for="tab-8" class="tab-label-4">Visitas guiadas</label>
+      <input id="tab-5" type="radio" name="radio-set" class="tab-selector-5" />
+      <label for="tab-5" class="tab-label-5">Préstamo notebooks</label>
+      <input id="tab-6" type="radio" name="radio-set" class="tab-selector-6" />
+      <label for="tab-6" class="tab-label-6">Libre deuda</label>
+      <input id="tab-7" type="radio" name="radio-set" class="tab-selector-7" />
+      <label for="tab-7" class="tab-label-7">Diseño de Software</label>
+      <input id="tab-8" type="radio" name="radio-set" class="tab-selector-8" />
+      <label for="tab-8" class="tab-label-8">Visitas guiadas</label>
   <div class="content">
     <div class="content-1">
       <h2>Préstamo de material impreso</h2>
@@ -218,43 +219,44 @@
 <!-- tabla de servicios DOS-->
 <section class="tabs tabs2">
   <input id="tab-9" type="radio" name="radio-set" class="tab-selector-9" checked="checked" />
-  <label for="tab-9" class="tab-label-9">Préstamo de material</label>
+  <label for="tab-9" class="tab-label-9">Soporte infraestructura</label>
   <input id="tab-10" type="radio" name="radio-set" class="tab-selector-10" />
-  <label for="tab-10" class="tab-label-10">Formación de usuarios</label>
+  <label for="tab-10" class="tab-label-10">Hosting de sitios web</label>
   <input id="tab-11" type="radio" name="radio-set" class="tab-selector-11" />
-  <label for="tab-11" class="tab-label-11">Búsqueda de información</label>
+  <label for="tab-11" class="tab-label-11">CARPC</label>
   <input id="tab-12" type="radio" name="radio-set" class="tab-selector-12" />
-  <label for="tab-12" class="tab-label-12">Gestión del Repositorio</label>
-  <input id="tab-13" type="radio" name="radio-set" class="tab-selector-13" checked="checked" />
-  <label for="tab-13" class="tab-label-13">Préstamo notebooks</label>
+  <label for="tab-12" class="tab-label-12">Préstamo nacional</label>
+  <input id="tab-13" type="radio" name="radio-set" class="tab-selector-13"/>
+  <label for="tab-13" class="tab-label-13"> Consultoría de Sistemas de Gestión Bibliotecaria</label>
   <input id="tab-14" type="radio" name="radio-set" class="tab-selector-14" />
-  <label for="tab-14" class="tab-label-14">Libre deuda</label>
+  <label for="tab-14" class="tab-label-14">Soporte técnico software</label>
  
 <div class="content content2">
 <div class="content-9">
-  <h2>Préstamo de material impreso</h2>
-  <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
+  <h2>Mantenimiento de infraestructura</h2>
+  <p>Mantenimiento de infraestructura de hardware para todas las bibliotecas</p>
 </div>
 <div class="content-10">
-  <h2>Formación de usuarios</h2>
-  <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
+  <h2>Hosting de sitios web</h2>
+  <p>Hosting de sitios web de bibliotecas en nuestro servidor.</p>
 </div>
 <div class="content-11">
-  <h2>Búsqueda de información</h2>
-  <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.</p>
-  <p>Duis cursus. Maecenas ligula eros, blandit nec, pharetra at, semper at, magna. Nullam ac lacus. Nulla facilisi. Praesent viverra justo vitae neque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Pellentesque nec elit. Fusce in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.</p>
+  <h2>Mantenimiento del Catálogo de Publicaciones Científicas (CARPC)</h2>
+  <p>Es un desarrollo de software que responde a la necesidad de conocer el estado de las colecciones de revistas científicas en las bibliotecas participantes, mediante una consulta a un catálogo centralizado. La tecnología de Internet integra y resuelve exitosamente esta necesidad.
+    El desarrollo sumó el esfuerzo de esas bibliotecas por cargar sus propias bases de datos en un formato y software estandarizado.
+    Los usuarios de las bibliotecas pueden así consultar la existencia de un fascículo de la revista buscada y solicitar el material por correo electrónico, todo en una misma operación. Para acceder a este servicio, cada usuario deberá estar registrado en una biblioteca de la Red.</p>
 </div>
 <div class="content12">
-  <h2>Gestión del Repositorio Institucional</h2>
-  <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commod. Pellentesque nec elit. Fusce in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.</p>
+  <h2>Préstamo interbibliotecario</h2>
+  <p>Gestionamos el préstamo de libros entre las bibliotecas de la nación</p>
 </div>
 <div class="content-13">
-  <h2>Préstamo de proyector y notebooks</h2>
-  <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante. Etiam aliquet massa et lorem. Mauris dapibus lacus auctor risus. Aenean tempor ullamcorper leo. Vivamus sed magna quis ligula eleifend adipiscing. Duis orci. Aliquam sodales tortor vitae ipsum. Aliquam nulla. Duis aliquam molestie erat. Ut et mauris vel pede varius sollicitudin. Sed ut dolor nec orci tincidunt interdum. Phasellus ipsum. Nunc tristique tempus lectus.</p>
+  <h2> Consultoría de Sistemas de Gestión Bibliotecaria</h2>
+  <p>Consulte con nuestro expertos en bc@lorem.edu.ar</p>
 </div>
 <div class="content-14">
-  <h2>Solicitud de libre deuda</h2>
-  <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
+  <h2>Soporte técnico de software bibliotecario</h2>
+  <p>Consulte con nuestro expertos en bc@lorem.edu.ar</p>
 </div>
 </div>
 </section>
