--- a/pages/calidad.html
+++ b/pages/calidad.html
@@ -145,7 +145,7 @@
 <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
   <div class="container">
     <div class="section text-center">
-      <h2 class="title">Novedades</h2>
+      <h2 class="title">Nuestra organización</h2>
        <!-- gif de bicho saltando -->
        <div class="col-sm-6 justify-content-end align-self-end">
         <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
@@ -161,13 +161,43 @@
   <img src="../images/organigrama.jpg"" class="img-fluid col-md-6 float-md-end mb-3 ms-md-3" alt="Responsive image">
    
     <br>
-    <h4>Nuestro organigrama</h4>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque adipisci facilis et labore quibusdam nostrum dolor porro eaque dolorem in, iusto numquam necessitatibus a nihil iste libero dicta maxime accusantium dolorum eius? Ipsam minus modi mollitia voluptates soluta? Velit aperiam qui delectus eos nisi consectetur nemo possimus, doloribus aspernatur iure unde optio ipsa autem iusto incidunt assumenda ab, deleniti vel exercitationem enim minus aliquid repellendus dolore minima. Culpa dolores nobis non et voluptates error corporis ipsam labore aliquam vitae officia excepturi cumque repellendus, illum ducimus ratione inventore ad! Veniam animi blanditiis accusamus delectus numquam, commodi labore velit mollitia maiores earum.</p>
+    <h4>Organigrama</h4>
+    <br> <h5>Roles y responsabilidades:</h5>
+    <ul>
+    <li>Dirección (DI): Organizar y dirigir los servicios bibliotecarios centrales de la UNL a
+      través de la definición de políticas y objetivos en el marco del Sistema de Gestión de
+      Calidad implementado y del Plan Estratégico de la UNL; ejerciendo la representación
+      de la UNL en el área de bibliotecas ante organismos externos y coordinado las
+      actividades de las bibliotecas de la UNL.</li>
+    <li>Procesos Técnicos (PR): Organizar los procesos de catalogación y clasificación,
+      control de autoridades, control de número de inventario y colaborar en la gestión del
+      repositorio institucional; controlando y supervisando para tal fin al personal a su
+      cargo y coordinando acciones con otros departamentos de la BC y otras bibliotecas
+      de la UNL.</li>
+    <li> Sistemas (SI): Organizar los procesos de diseño y desarrollo de sistemas
+      automatizados para bibliotecas, infraestructura informática de bibliotecas
+      (conectividad e Internet, servidores y soporte técnico) y colaborar en la confección
+      de credenciales y en la gestión del repositorio institucional; controlando y supervisando para tal fin al personal a su cargo y coordinando acciones con otros
+      departamentos de la BC y otras bibliotecas de la UNL.</li>
+    <li>Servicios al usuario (SE): Organizar los procesos de circulación de material
+      bibliográfico, gestión de colecciones y colaborar en la confección de credenciales, la
+      gestión del repositorio institucional y en la realización de encuestas de satisfacción
+      de usuarios; controlando y supervisando para tal fin al personal a su cargo y
+      coordinando acciones con otros departamentos de la BC y otras bibliotecas de la
+      UNL.</li> 
+    <li>Referencia y Hemeroteca Técnica (RE): Organizar los procesos de suministro de
+      papers y documentación técnica, Alfabetización en gestión de información,
+      Comunicación organizacional y colaborar en la gestión del repositorio institucional y
+      en la realización de encuestas de satisfacción de usuarios; controlando y
+      supervisando para tal fin al personal a su cargo y coordinando acciones con otros
+      departamentos de la BC y otras bibliotecas de la UNL.</li>
+    <li>Calidad (CA): Colaborar con todos los miembros de la BC en la administración y
+      mantenimiento del Sistema de Gestión de la Calidad.</li>
+      <li>Administración (AD): Colaborar con las tareas administrativas de la biblioteca.</li>
+
+    </ul>
+    
   
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum iusto dolor natus optio. Eos dolor quam voluptate molestiae delectus!
-    </p>
 
 </div>
 </aside>
@@ -175,8 +205,9 @@
 <!-- seccion -->
 <section class="container plan" id="plan" data-aos="flip-right">
   <div class="row" id="encuesta">
-    <h2>Plan estrategico</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi molestiae iste cum ipsam, in illum natus cupiditate ab omnis repellendus neque, dolorum quod illo, esse sit fuga amet laborum soluta eius corporis adipisci aliquam. Culpa ipsam molestiae quisquam nulla tenetur debitis quasi officia. Quisquam quasi incidunt voluptatum eum quae iure perspiciatis numquam fugiat sit magnam optio vel maxime labore voluptate cupiditate asperiores, eius minus at eos possimus. In accusantium nobis cumque quae consectetur quaerat perferendis beatae sed! Repudiandae nobis dignissimos inventore cum animi provident ipsa illo, et unde hic! Vitae ullam nihil saepe quam doloremque distinctio unde fugiat. Voluptatum porro ducimus velit aut nihil similique ut quo obcaecati expedita? Aut, eligendi ea dicta est nesciunt earum modi facere corrupti a maxime similique accusamus nam placeat qui eaque tenetur impedit, debitis sit aliquid hic error? Maiores asperiores reiciendis, tempore ipsum error ut obcaecati deserunt culpa sint illum magni sapiente veniam voluptatem optio debitis nemo placeat soluta id! Voluptate cumque quibusdam veniam molestias alias vel dolorem saepe voluptatibus obcaecati aspernatur vero sequi fugit quidem iusto eligendi, exercitationem nostrum ab laudantium, placeat a perspiciatis. Error dolorum corrupti ut consequuntur distinctio quas eveniet maxime quibusdam quae quam cumque tempora laborum, hic ullam voluptatum sapiente!</p>
+    <h2>Plan estrategico y acreditación de calidad</h2>
+    <p>La Biblioteca Central, de acuerdo a la norma IRAM-ISO 9001:2015, centra su actividad en la satisfacción de los usuarios a través de la mejora continua de los servicios ofrecidos.</p>
+    <p>Dentro del contexto institucional se elaboró el Plan Estratégico que se basa en un diagnóstico de la Biblioteca Central de la Universidad Nacional de Lorem (UNL), ubicado en el contexto institucional y en la coexistencia de bibliotecas especializadas. Los proyectos propuestos contemplan el Plan Estratégico de la (UNL), la agenda 2030 con los objetivos de desarrollo sustentable establecidos por las Naciones Unidas y un breve análisis de escenarios futuros.</p>
   </div>
 </section>
 
@@ -187,17 +218,27 @@
   <div class="row" id="manual">
     <div>
     <h2>Politica y manual de calidad</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet, rem dolor consectetur ut in obcaecati, laboriosam saepe praesentium odit aliquam reiciendis ipsum cupiditate modi unde dolores sit provident quis explicabo similique! Quos inventore aperiam libero beatae, excepturi magnam voluptatum ratione consequatur, facere aliquam eveniet provident possimus repellat perferendis minima aliquid autem exercitationem. Accusamus aspernatur eius doloremque possimus quidem nulla repudiandae non voluptate eos, obcaecati ipsum cumque, officia veniam ullam ipsam numquam nam et exercitationem. Magni ipsa molestiae aspernatur aliquam, vero dolore voluptatibus, molestias labore perferendis ut excepturi, error eaque omnis quis possimus esse tempora repellendus facilis porro placeat minima praesentium odit quas et! Dolorem, exercitationem, architecto consequuntur aspernatur praesentium quod minus quia saepe est iure beatae voluptatibus aut repellendus culpa distinctio tempora quos hic cum vitae corporis sit. Culpa ullam corrupti minus aspernatur est repellendus atque inventore eum, cumque sit voluptas quasi libero quam asperiores ipsam a ratione quaerat ducimus obcaecati. Animi voluptatum dicta officiis neque aliquid! Numquam eos quos nobis quidem dolorem ad qui officia ullam reiciendis? Ipsam, quae animi dolor rerum eum perspiciatis veniam alias, unde vero sapiente vitae aliquid culpa? Laboriosam doloribus modi magni maiores, cumque minus architecto totam veniam qui dolore vero! Non ut quia alias odio quisquam voluptatum delectus quae, mollitia, sequi ducimus reiciendis animi est rerum deleniti molestiae excepturi vitae! Maiores itaque obcaecati nam veritatis nemo nulla. Architecto maxime ipsum unde enim ab culpa ad omnis laborum reprehenderit cumque quo earum nemo, et eum deserunt nobis reiciendis ducimus magni aliquid repellendus soluta. Dolore ad unde quos quis deleniti saepe placeat, nulla, exercitationem hic facilis officia dolorem consectetur molestias iste numquam ut perferendis possimus consequatur dicta laudantium nemo. Ratione, cumque dolores amet, repellat hic laborum ut eligendi fugiat libero quas nulla blanditiis tenetur numquam praesentium labore, minus voluptates et quibusdam eveniet nobis? Aliquam, neque asperiores.</p>
+    <p>PROXIMAMENTE, subiremos aquí el documento que contiene los requisitos para el sistema de gestión de la calidad (SGC) de la Biblioteca Central de acuerdo a la norma IRAM-ISO 9001:2015 facilitando la inmersión (De acuerdo a la
+      definición de la RAE: Acción de introducir o introducir plenamente alguien en un ambiente
+      determinado) al SGC de la BC UNL.</p>
+      <p>La política de la calidad de la  BC UNL está conformada por las secciones Misión,
+      Valores, Visión, Alcance y Enfoques del IDI001 Plan Estratégico  BC UNL , y
+      representa el compromiso de la organización con la calidad como declaración de principios y
+      buenas intenciones. Esta política es firmada por el Director de la biblioteca, la Secretaria
+      General Académica y el Rector de la UNL; y es publicada tal que sea accesible por la
+      comunidad universitaria..</p>
   </div>
 </div>
 </section>
 
 
+<!-- titulo de graficos -->
+<section class="encuesta">
+  <h2 id="encuestar">Encuesta de satisfacción sobre nuestros servicios</h1>
+</section>
 <!-- graficos -->
-
 <section class="grafico">
-      <div class="container grafico-container">
-        <h1 id="encuesta">Encuesta de satisfacción sobre nuestros servicios</h1>
+      <div class="container grafico-container">        
         <!-- DONUT CHART BLOCK (LEFT-CONTAINER) --> 
         <div class="donut-chart-block block"> 
                           <h2 class="titular">Servicios</h2>
