comprimiendo imagenes y los alt

--- a/index.html
+++ b/index.html
@@ -183,21 +183,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/dibujo33.png" class="d-block w-100" alt="...">
+      <img src="images/dibujo33comprimido.png" class="d-block w-100" alt="Dibujo parcial de un libro rojo volando">
       <div class="carousel-caption d-none d-md-block">
         <h5>Concurso de dibujos creados con AI</h5>
         <p>Nuestros usuarios participaron del concurso! vea las imágenes nominadas aquí</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/universidad33.jpg" class="d-block w-100" alt="...">
+      <img src="images/universidad33comprimida.jpg" class="d-block w-100" alt="Fachada Universidad Nacional">
       <div class="carousel-caption d-none d-md-block">
         <h5>Noticias de la Universidad Lorem</h5>
         <p>Enterate las últimas noticias aquí.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/biblio33.jpg" class="d-block w-100" alt="...">
+      <img src="images/biblio33comprimida.jpg" class="d-block w-100" alt="Foto de estanterías blancas con libros de colores">
       <div class="carousel-caption d-none d-md-block">
         <h5>Conoce nuestras instalaciones!</h5>
         <p>Compartimos imágenes y mapa de nuestra biblioteca</p>
@@ -222,7 +222,7 @@
       <div class="col-sm-3">
         <div class="card cardi">
           <div class="card-body">
-            <img src="https://placekitten.com/316/316" class="card-img-top" alt="..."> <div class="card-body">
+            <img src="./images/juancomprimido.jpg" class="card-img-top" alt="Hombre de mediana edad sonriendo"> <div class="card-body">
             
            <!-- <img src="images/juan.jpg" class="card-img-top" alt="...">
             <div class="card-body">  -->
@@ -236,7 +236,7 @@
     <div class="col-sm-3">
       <div class="card cardi">
         <div class="card-body">
-          <img src="https://placekitten.com/316/316" class="card-img-top" alt="...">
+          <img src="./images/dibujo2comprimido.png" class="card-img-top" alt="Dibujo de totoro bajo el agua leyendo un libro">
           <div class="card-body">
           <h5 class="card-title">Novedades en la sección Infantil</h5>
           <p class="card-text">Conoce los nuevos libros.</p>
@@ -249,7 +249,7 @@
   <div class="col-sm-3">
     <div class="card cardi">
       <div class="card-body">
-        <img src="https://placekitten.com/316/316" class="card-img-top" alt="...">
+        <img src="./images/dibujo21comprimido.png" class="card-img-top" alt="Robot leyendo un libro en el pasto">
         <div class="card-body">
         <h5 class="card-title">¿Es verdad que un robot que puede leer?</h5>
         <p class="card-text" >Foro debate sobre el futuro de la IA</p>
@@ -262,7 +262,7 @@
 <div class="col-sm-3">
   <div class="card cardi">
     <div class="card-body">
-      <img src="https://placekitten.com/316/316" class="card-img-top" alt="...">
+      <img src="./images/dibujo4comprimido.png" class="card-img-top" alt="Biblioteca llena de libros">
       <div class="card-body" style="height: 25%";>
       <h5 class="card-title">Conoce la colección de nuestros autores locales</h5>
       <p class="card-text">Disponible para toda la comunidad.</p>
@@ -280,7 +280,7 @@
 <aside>
 <div class="clearfix asides curso efecti" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
 
-<img src="images/andrea.jpg" class="img-fluid col-md-6 float-md-end mb-3 ms-md-3" alt="Responsive image woman">
+<img src="./images/andreacomprimida.jpg" class="img-fluid col-md-6 float-md-end mb-3 ms-md-3" alt="Responsive image woman">
 
 <h4>Curso Derechos de Autor en las Bibliotecas universitarias</h4>
 
