comentarios compresion fotos y contenido

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -275,7 +275,7 @@
         <li>
           <div class="comment-main-level">
             <!-- Avatar -->
-            <div class="comment-avatar"><img src="../images/andrea.jpg" alt="mujer"></div>
+            <div class="comment-avatar"><img src="../images/ivanareducida.jpg" alt="Mujer sonriendo en la naturaleza"></div>
             <!-- Contenedor del Comentario -->
             <div class="comment-box">
               <div class="comment-head">
@@ -285,7 +285,7 @@
                 <i class="fa fa-heart"></i>
               </div>
               <div class="comment-content">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                Esta biblioteca es fantástica, felicitaciones a todos por la calidad del servicio!
               </div>
             </div>
           </div>
@@ -293,7 +293,7 @@
           <ul class="comments-list reply-list">
             <li>
               <!-- Avatar -->
-              <div class="comment-avatar"><img src="../images/pepe.jpg" alt="hombre"></div>
+              <div class="comment-avatar"><img src="../images/pedrocomprimido.jpg" alt="Hombre afroamericano"></div>
               <!-- Contenedor del Comentario -->
               <div class="comment-box">
                 <div class="comment-head">
@@ -303,14 +303,14 @@
                   <i class="fa fa-heart"></i>
                 </div>
                 <div class="comment-content">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                  No estoy de acuerdo, no tienen libros de True Crime, censuran novelas betseller.
                 </div>
               </div>
             </li>
     
             <li>
               <!-- Avatar -->
-              <div class="comment-avatar"><img src="../images/andrea.jpg" alt="mujer"></div>
+              <div class="comment-avatar"><img src="../images/ivanareducida.jpg" alt="Mujer sonriendo en la naturaleza"></div>
               <!-- Contenedor del Comentario -->
               <div class="comment-box">
                 <div class="comment-head">
@@ -320,7 +320,7 @@
                   <i class="fa fa-heart"></i>
                 </div>
                 <div class="comment-content">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                  Es una biblioteca universitaria Pedro, se centra en la literatura académica.
                 </div>
               </div>
             </li>
@@ -330,7 +330,7 @@
         <li>
           <div class="comment-main-level">
             <!-- Avatar -->
-            <div class="comment-avatar"><img src="../images/pedro.jpg" alt=""></div>
+            <div class="comment-avatar"><img src="../images/ponyreducido.png" alt="Dibujo fondo rosa robot lee"></div>
             <!-- Contenedor del Comentario -->
             <div class="comment-box">
               <div class="comment-head">
@@ -340,7 +340,7 @@
                 <i class="fa fa-heart"></i>
               </div>
               <div class="comment-content">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?
+                No es verdad eso, la biblioteca tiene prestamo interbibliotecario nacional entonces se puede acceder a toda la literatura de la nación XD.
               </div>
             </div>
           </div>
