display none en pantallas pequeñas

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
     <div class="section text-center">
       <h2 class="title">Novedades</h2>
        <!-- gif de bicho saltando -->
-       <div class="col-sm-6 justify-content-end align-self-end">
-        <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
+       <div class="col-sm-6 justify-content-end align-self-end d-none d-sm-block d-md-block">
+        <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="20%" >
     </div>
     </div>
   </div>
@@ -175,8 +175,8 @@
     
 
 <!-- Carrusel -->
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-  <div class="carousel-indicators">
+<div id="carouselExampleCaptions" class="carousel slide d-none d-sm-block d-md-block" data-bs-ride="false">
+  <div class="carousel-indicators ocultar d-none">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -189,14 +189,14 @@
         <p>Nuestros usuarios participaron del concurso! vea las imágenes nominadas aquí</p>
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item d-none d-sm-block d-md-block">
       <img src="images/universidad33comprimida.jpg" class="d-block w-100" alt="Fachada Universidad Nacional">
       <div class="carousel-caption d-none d-md-block">
         <h5>Noticias de la Universidad Lorem</h5>
         <p>Enterate las últimas noticias aquí.</p>
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item d-none d-sm-block d-md-block">
       <img src="images/biblio33comprimida.jpg" class="d-block w-100" alt="Foto de estanterías blancas con libros de colores">
       <div class="carousel-caption d-none d-md-block">
         <h5>Conoce nuestras instalaciones!</h5>
@@ -327,9 +327,9 @@ de contenidos.</li>  <br>
           </div>
         </form>
     </div>
-      <div class="col-sm-3 libri">
-        <img alt="" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">     
-        <p>BC Lorem - Todos los derechos reservados ©</p>
+      <div class="col-sm-3 libri d-none d-sm-block d-md-block">
+        <img alt="gi de libro entusiasmado" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">     
+        <p class="d-none d-sm-block d-md-block">BC Lorem - Todos los derechos reservados ©</p>
       </div>        
     </div>
     </div>
