--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -148,7 +148,7 @@
     <div class="section text-center">
       <h2 class="title">Formulario de contacto</h2>
        <!-- gif de bicho saltando -->
-       <div class="col-sm-6 justify-content-end align-self-end">
+       <div class="col-sm-6 justify-content-end align-self-end d-none d-sm-block d-md-block">
         <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
     </div>
     </div>
@@ -214,7 +214,7 @@
   
         <div class="col-md-6">
           <div class="form-group">
-            <label for="Mensaje">Mensaje <small></small></label>
+            <label for="Mensaje"><small>Mensaje</small></label>
             <input type="Mensaje" class="form-control" id="mensaje" placeholder="Mensaje">
           </div>
   
@@ -244,7 +244,7 @@
         </label>
       </div>
   
-      <button class="custom-btn btn-4"><span>Enviar</span></button>
+      <button class="btn custom-btn btn-4"><span>Enviar</span></button>
      
     </form>
   </div>
@@ -269,9 +269,9 @@
         </div>
       </form>
   </div>
-    <div class="col-sm-3 libri">
-      <img alt="" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">
-      <p>BC Lorem - Todos los derechos reservados ©</p>
+    <div class="col-sm-3 libri d-none d-sm-block d-md-block">
+      <img alt="libro celeste entusiasmado - gif" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">
+      <p class="d-none d-sm-block d-md-block">BC Lorem - Todos los derechos reservados ©</p>
     </div>        
   </div>
   </div>
