--- a/pages/historia.html
+++ b/pages/historia.html
@@ -114,7 +114,7 @@
      </div>
    </nav>
 <!-- fin nav -->
-<!-- COPIA HASTA AQUIIIIIII -->
+
 <!-- carta contenedora del body -->
 <section class="page-header min-vh-80" style="background-image: url('../images/rosita.jpg')">
   <span class="mask bg-gradient-dark opacity-6"></span>
@@ -150,11 +150,11 @@
       <h2 class="title container history">Nuestra historia</h2>
     </div>
   </div>
-<!-- COPIA HASTA AQUIIIIIII -->
+<!-- marco termina -->
 
 
 <!-- timeline -->
-<main class="container timeline">
+<main class="container timeline d-none d-sm-block d-md-block">
   <ol class="timeline row">
     <li>2000
       <span>
@@ -233,7 +233,7 @@
 <!-- de aside -->
 
    <!-- OPINIONES -->
-   <article class="comentarios">
+   <article class="comentarios d-none d-sm-block d-md-block">
     <!-- Contenedor Principal -->
     <div class="container comments-container">
       <h1>Comentarios</h1>
@@ -337,9 +337,9 @@
               </div>
             </form>
         </div>
-          <div class="col-sm-3 libri">
+          <div class="col-sm-3 libri d-none d-sm-block d-md-block">
             <img alt="" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">
-            <p>BC Lorem - Todos los derechos reservados ©</p>
+            <p class="d-none d-sm-block d-md-block">BC Lorem - Todos los derechos reservados ©</p>
           </div>        
         </div>
         </div>
