--- a/pages/calidad.html
+++ b/pages/calidad.html
@@ -147,7 +147,7 @@
     <div class="section text-center">
       <h2 class="title">Nuestra organización</h2>
        <!-- gif de bicho saltando -->
-       <div class="col-sm-6 justify-content-end align-self-end">
+       <div class="col-sm-6 justify-content-end align-self-end d-none d-sm-block d-md-block">
         <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
     </div>
     </div>
@@ -233,11 +233,11 @@
 
 
 <!-- titulo de graficos -->
-<section class="encuesta">
+<section class="encuesta d-none d-sm-block d-md-block">
   <h2 id="encuestar">Encuesta de satisfacción sobre nuestros servicios</h1>
 </section>
 <!-- graficos -->
-<section class="grafico">
+<section class="grafico d-none d-sm-block d-md-block">
       <div class="container grafico-container">        
         <!-- DONUT CHART BLOCK (LEFT-CONTAINER) --> 
         <div class="donut-chart-block block"> 
@@ -351,7 +351,7 @@
 
 
    <!-- OPINIONES -->
-   <article class="comentarios">
+   <article class="comentarios d-none d-sm-block d-md-block">
     <!-- Contenedor Principal -->
     <div class="container comments-container">
       <h1>Comentarios</h1>
@@ -456,9 +456,9 @@
               </div>
             </form>
         </div>
-          <div class="col-sm-3 libri">
-            <img alt="" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">
-            <p>BC Lorem - Todos los derechos reservados ©</p>
+          <div class="col-sm-3 libri d-none d-sm-block d-md-block">
+            <img alt="libro celeste entusiasmado - gif" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">
+            <p class="d-none d-sm-block d-md-block">BC Lorem - Todos los derechos reservados ©</p>
           </div>        
         </div>
         </div>
