--- a/pages/guias.html
+++ b/pages/guias.html
@@ -149,7 +149,7 @@
     <div class="section text-center">
       <h2 class="title">Guia de uso de Bases de datos especializadas</h2>
        <!-- gif de bicho saltando -->
-       <div class="col-sm-6 justify-content-end align-self-end">
+       <div class="col-sm-6 justify-content-end align-self-end d-none d-sm-block d-md-block">
         <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
     </div>
     </div>
@@ -349,9 +349,9 @@
         </div>
       </form>
   </div>
-    <div class="col-sm-3 libri">
-      <img alt="" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">
-      <p>BC Lorem - Todos los derechos reservados ©</p>
+    <div class="col-sm-3 libri d-none d-sm-block d-md-block">
+      <img alt="libro celeste entusiasmado - gif" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">
+      <p class="d-none d-sm-block d-md-block">BC Lorem - Todos los derechos reservados ©</p>
     </div>        
   </div>
   </div>
