--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -147,7 +147,7 @@
       <h2 class="titlen">Conoce nuestros servicios</h2>
       <h3 class="titlen">Haz click en las solapas desplegables</h3>
        <!-- gif de bicho saltando -->
-       <div class="col-sm-6 justify-content-end align-self-end">
+       <div class="col-sm-6 justify-content-end align-self-end d-none d-sm-block d-md-block">
         <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="10%">
     </div>
     </div>
@@ -266,7 +266,7 @@
 
 
    <!-- OPINIONES -->
-   <article class="comentarios">
+   <article class="comentarios d-none d-sm-block d-md-block">
     <!-- Contenedor Principal -->
     <div class="container comments-container">
       <h1>Comentarios</h1>
@@ -370,9 +370,9 @@
               </div>
             </form>
         </div>
-          <div class="col-sm-3 libri">
+          <div class="col-sm-3 libri d-none d-sm-block d-md-block">
             <img alt="" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">
-            <p>BC Lorem - Todos los derechos reservados ©</p>
+            <p class="d-none d-sm-block d-md-block">BC Lorem - Todos los derechos reservados ©</p>
           </div>        
         </div>
         </div>
