--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -111,9 +111,9 @@
        </div>
      </div>
    </nav>
-<!-- COPIA HASTA AQUIIIIIII -->
+<!-- fin nav -->
 <!-- carta contenedora del body -->
-<section class="page-header min-vh-80" style="background-image: url('../images/rosita.jpg')">
+<section class="page-header min-vh-80 cartina" style="background-image: url('../images/rosita.jpg')">
   <span class="mask bg-gradient-dark opacity-6"></span>
   <div class="container">
     <div class="row">
@@ -141,7 +141,7 @@
     </div>
   </div>
 </div>
-<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6 carti-loki">
+<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6 carti-loki cartina">
   <div class="container">
     <div class="section text-center">
       <h2 class="titlen">Conoce nuestros servicios</h2>
