--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
 
 <!-- Fin nav -->
 
-<!-- COPIA HASTA AQUIIIIIII -->
 <!-- carta contenedora del body -->
-<section class="page-header min-vh-80" style="background-image: url('./images/rosita.jpg')">
+<section class="page-header min-vh-80 cartina" style="background-image: url('./images/rosita.jpg') ">
   <span class="mask bg-gradient-dark opacity-6"></span>
   <div class="container">
     <div class="row">
