--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -113,9 +113,9 @@
      </div>
    </nav>
 
-<!-- COPIA HASTA AQUIIIIIII -->
+<!-- fin nav -->
 <!-- carta contenedora del body -->
-<section class="page-header min-vh-80" style="background-image: url('../images/rosita.jpg')">
+<section class="page-header min-vh-80 cartina" style="background-image: url('../images/rosita.jpg')">
   <span class="mask bg-gradient-dark opacity-6"></span>
   <div class="container">
     <div class="row">
