--- a/pages/guias.html
+++ b/pages/guias.html
@@ -114,9 +114,9 @@
    </nav>
 <!-- fin nav- menú principal -->
 
-<!-- COPIA HASTA AQUIIIIIII -->
+
 <!-- carta contenedora del body -->
-<section class="page-header min-vh-80" style="background-image: url('../images/rosita.jpg')">
+<section class="page-header min-vh-80 cartina" style="background-image: url('../images/rosita.jpg')">
   <span class="mask bg-gradient-dark opacity-6"></span>
   <div class="container">
     <div class="row">
@@ -144,7 +144,7 @@
     </div>
   </div>
 </div>
-<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6 carti-loca">
+<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6 carti-loca cartina">
   <div class="container">
     <div class="section text-center">
       <h2 class="title">Guia de uso de Bases de datos especializadas</h2>
