--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -244,7 +244,7 @@
         </label>
       </div>
   
-      <button class="btn custom-btn btn-4"><span>Enviar</span></button>
+      <button class="custom-btnn custom-btn btn-4"><span>Enviar</span></button>
      
     </form>
   </div>
